# kaplayer

./: .gitignore  CMakeLists.txt  README.md  kaplayer.pro  kaplayer.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Themes/: dark.qss
installer/: kaplayer.iss
